--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <!-- Title of the dialog where the user is adjusting the general audio volume -->
     <string name="volume_unknown">Volume</string>
 
+    <string name="description_delete_button">backspace</string>
+
+
 </resources>
